squished bugs

--- a/app/assets/stylesheets/components.css
+++ b/app/assets/stylesheets/components.css
@@ -42,7 +42,6 @@ body {
   min-height: 100%;
   background-color: #fff;
   font-family: Arial, sans-serif;
-  font-size: 14px;
   line-height: 20px;
   color: #333;
 }
